More clear code, changed buffer creation functions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,13 +34,12 @@ set_target_properties(ShVulkan PROPERTIES ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURC
 #ShVulkan_graphics_example
 option(SH_VULKAN_BUILD_EXAMPLES OFF)
 if (SH_VULKAN_BUILD_EXAMPLES)
-add_subdirectory(external/glfw)
-add_executable(ShVulkan_graphics_example 
-	examples/src/graphicsExample.c
-	examples/src/computeExample.c
-)
+add_subdirectory(examples/external/glfw)
+add_executable(ShVulkan_graphics_example examples/src/graphicsExample.c)
 target_link_libraries(ShVulkan_graphics_example PUBLIC ShVulkan glfw)
-set_target_properties(ShVulkan_graphics_example PROPERTIES
+add_executable(ShVulkan_compute_example examples/src/computeExample.c)
+target_link_libraries(ShVulkan_compute_example PUBLIC ShVulkan)
+set_target_properties(ShVulkan_graphics_example ShVulkan_compute_example PROPERTIES
     RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin
     VS_DEBUGGER_WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/bin
 )
