--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "examples/external/glfw"]
 	path = examples/external/glfw
 	url = https://github.com/glfw/glfw.git
+[submodule "examples/external/PlyImporter"]
+	path = examples/external/PlyImporter
+	url = https://github.com/MrSinho/PlyImporter
