Descriptor buffer structure alignment
Descriptor buffer alignment done automatically using generated macro functions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.0)
 add_definitions(-DCMAKE_EXPORT_COMPILE_COMMANDS=ON)
 
-project(ShVulkan C)
+project(shvulkan C)
 
 find_package(Vulkan REQUIRED FATAL_ERROR)
 
