--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,12 +5,12 @@ project(shvulkan C)
 
 find_package(Vulkan REQUIRED FATAL_ERROR)
 
-option(SH_USE_VULKAN_1_0 OFF)
+option(SH_USE_VULKAN_1_0 CACHE OFF)
 if(SH_USE_VULKAN_1_0)
     add_definitions(-DSH_USE_VULKAN_1_0)
 endif(SH_USE_VULKAN_1_0)
 
-option(SH_USE_VULKAN_1_1 OFF)
+option(SH_USE_VULKAN_1_1 CACHE OFF)
 if(SH_USE_VULKAN_1_1)
     add_definitions(-DSH_USE_VULKAN_1_1)
 endif(SH_USE_VULKAN_1_1)
@@ -31,7 +31,7 @@ target_include_directories(shvulkan PUBLIC
 target_link_libraries(shvulkan PUBLIC ${Vulkan_LIBRARIES})
 set_target_properties(shvulkan PROPERTIES ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
 
-option(SH_VULKAN_BUILD_EXAMPLES OFF)
+option(SH_VULKAN_BUILD_EXAMPLES CACHE OFF)
 if (SH_VULKAN_BUILD_EXAMPLES)
 add_subdirectory(examples/external/glfw)
 add_executable(shvulkan-graphics-example examples/src/graphicsExample.c)
