--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "docs/doxygen-awesome-css"]
 	path = docs/doxygen-awesome-css
 	url = https://github.com/jothepro/doxygen-awesome-css.git
+[submodule "examples/external/vulkan-virtual-outputs"]
+	path = examples/external/vulkan-virtual-outputs
+	url = https://github.com/mrsinho/vulkan-virtual-outputs.git
