--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -17,5 +17,5 @@ jobs:
         signingKey: '${{ secrets.CACHIX_SIGNING_KEY }}'
         # If you chose API tokens for write access OR if you have a private cache
         authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
-    - run: nix-build
-    - run: nix-shell --run "echo OK"
+    - run: nix develop
+    - run: "Build completed successfully"
