--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,4 +1,4 @@
-name: "Test"
+name: "shvulkan flake test"
 on:
   pull_request:
   push:
@@ -18,4 +18,4 @@ jobs:
         # If you chose API tokens for write access OR if you have a private cache
         authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
     - run: nix develop
-    - run: "Build completed successfully"
+    - run: echo "Build completed successfully"
