--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,9 +16,9 @@ option(SH_VULKAN_BINARIES_DIR CACHE OFF)
 if (NOT SH_VULKAN_BINARIES_DIR)
 
 if (WIN32)
-set(SH_VULKAN_BINARIES_DIR ${SH_VULKAN_ROOT_DIR}/bin/windows)
+set(SH_VULKAN_BINARIES_DIR ${SH_VULKAN_ROOT_DIR}/lib)
 elseif(UNIX)
-set(SH_VULKAN_BINARIES_DIR ${SH_VULKAN_ROOT_DIR}/bin/linux)
+set(SH_VULKAN_BINARIES_DIR ${SH_VULKAN_ROOT_DIR}/lib)
 endif(WIN32)
 
 endif()
