--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,19 +10,17 @@ set(SH_VULKAN_ROOT_DIR ${CMAKE_CURRENT_SOURCE_DIR})
 
 
 
-option(SH_VULKAN_BINARIES_DIR CACHE OFF)
+option(SH_VULKAN_LIB_DIR CACHE OFF)
+option(SH_VULKAN_BIN_DIR CACHE OFF)
 
 
-if (NOT SH_VULKAN_BINARIES_DIR)
-
-if (WIN32)
-set(SH_VULKAN_BINARIES_DIR ${SH_VULKAN_ROOT_DIR}/lib)
-elseif(UNIX)
-set(SH_VULKAN_BINARIES_DIR ${SH_VULKAN_ROOT_DIR}/lib)
-endif(WIN32)
-
+if (NOT SH_VULKAN_LIB_DIR)
+set(SH_VULKAN_LIB_DIR ${SH_VULKAN_ROOT_DIR}/lib)
 endif()
 
+if (NOT SH_VULKAN_BIN_DIR)
+set(SH_VULKAN_BIN_DIR ${SH_VULKAN_ROOT_DIR}/bin)
+endif()
 
 
 
